2002-12-12  James Henstridge  <james@daa.com.au>

	* module.py (Tarball): another Package type, pulling most of the
	logic from bootstrap.py.  Can fit into dependency chains with CVS
	modules.  Not being used yet.

2002-12-11  James Henstridge  <james@daa.com.au>

	* cvs.py (CVSRoot.update): fix up call to self.checkout.

	* moduleinfo.py (gnome22): add modules for the gnome 2.0 versions
	of libgnomeprint{,ui}.  Make changes to match updates to jhbuild.

	* cvs.py (CVSRoot.checkout, CVSRoot.update): update.

	* jhbuild.py: make it work with the refactored module.py

	* module.py: refactor a bit, putting more intelligence into the
	Module classes, simplifying the build loop.

2002-12-10  Chema Celorio  <chema@celorio.com>

	* moduleinfo.py: Fix libgnomeprint[ui] deps. Remove bonobo,
	add gnome-common & pango.
	* add gnome-vfs & libbonobo for libgsf

2002-11-28  Daniel Elstner  <daniel.elstner@gmx.net>

	module.py (_normal): Use 'tput sgr0' instead of 'tput rmso'.
	According to the tput/terminfo manpages 'rmso' is meant to
	complement 'smso', which isn't necessarily the same as 'bold'.
 	'sgr0' turns off all attribute modes and works fine for me.
	
2002-12-05  Glynn Foster   <glynn.foster@sun.com>
	
	* moduleinfo.py: Fix up the bonobo stuff for proper branches. 
	Change file-roller to get from cvs.gnome.org. Add gnome-utils 
	to the 2.2 list.

2002-12-03  Chema Celorio  <chema@celorio.com>

	* moduleinfo.py: fix the libgnomeprint[ui] deps
	(gnome22): fix the 22 version too

2002-11-28  Daniel Elstner  <daniel.elstner@gmx.net>

	* moduleinfo.py (gnome22): Add module for gnome-vfs HEAD,
	overriding gnome-vfs in the gnome20 module set.
	This means that gnome22 now uses gnome-vfs HEAD. It was using
	the gnome-vfs gnome-2-0 branch before.
	
2002-11-29  Murray Cumming  <murrayc@usa.net>

	* jhbuild.py: Commented-out the addpath() call that sets
	C_INCLUDE_PATH. We don't know why this was set. Maybe we will find out